app/assets/stylesheets/global.css.scss
$bc-green: #85B931;
$dark_grey: #3E3D42;
$darkest_grey: #333;
$light_grey: #48494D;
$text_light: #EEEEEE;
$dark_text: #333;
$red_link: #C84335;
$redder_link: #E47266;
$link_color: #FF8100;

body {
  background-color: $light_grey;
}

iframe, object, embed{
  max-width: 100%;
}

label {
  color: #EEE;
}

.shadowed {
  -webkit-box-shadow: 3px 3px 15px #333;
  -moz-box-shadow: 3px 3px 15px #333;
  box-shadow: 3px 3px 15px #333;
}

a.brand {
  small {
    color: #666;
    position:relative;
    top:-2px;
  }
}

#header-name {
  border-width: 5px 0;
  border-style: solid;
  border-color: $bc-green;
  color: white;
  font-size:56px;
  line-height:55px;
  margin-bottom:10px;
}

#mission {
  color:#CCC;
  font-style:italic;
  margin-bottom:10px;
}

footer {
  background-color: $bc-green;
  padding: 10px;
  color: #3E3D41;

  h4 {
    color: #FFF;
    font-size: 24px;
    line-height: 36px;
  }
  p {
    margin-bottom: 3px;
  }

  ul#ext-links {
    margin: -8px 10px 0;
    a li {
      color: #3E3D41;
      list-style:none;

      font-size:18px;
      line-height: 22px;

      overflow:hidden;
    }
    span {
      padding: 5px 1px;

      float:left;
      width: 200px;
      height: 22px;
      line-height:24px;
    }
    span.logo {
      width: 30px;
      line-height: 19px;

      img {
        position:relative;
        height: 24px;
        width: 24px;
        top: -1px;
      }
    }

  }
}

.can-haz-shadow {
  height: 0;

  -webkit-box-shadow: 0px 5px 25px 0px rgba(3, 3, 3, 0.5);
  -moz-box-shadow: 0px 5px 25px 0px rgba(3, 3, 3, 0.5);
  box-shadow: 0px 5px 25px 0px rgba(3, 3, 3, 0.5);
}
#main-content {
  background-color: #3E3D42;
  color: #DDD;
  padding: 5px 10px 20px 10px;

  > h2 {
    font-family: Webdings, sans-serif;
    color: #AAA;
    padding-top: 5px;
    font-weight: normal;
    font-size: 16px;
    line-height: 19px;
  }

  h3 {
    margin-bottom: 2px;
    color: #FF7D1B
  }

  a {
    color: #FF7D1B
  }
}

#the-left, #links-box {
  background-color: $bc-green;
}

#post-list {
  list-style-type:none;
  margin-left: 0;

  li {
    margin-bottom: 8px;
    padding-bottom: 8px;
    border-bottom: 2px solid #47494C;

    div.body {
      padding: 5px;

      p {
        margin-bottom: 5px;
      }
    }
  }
}

@media (min-width: 768px) and (max-width: 980px) { 
  div#the-left {
    width: 60%;
  }
}

@media (min-width: 768px) { 
  footer {
    overflow:hidden;
    p {
      padding: 0 1em;
    }
  }
  #the-left {
    float:left;
    width: 70%;
  }
  #links-box {
    float:right;
    width: 30%;
    min-width: 275px;

    #ext-links {
      padding: 0 1em;
    }
  }
  #main-content {
    background-color: #3E3D42;
    color: #DDD;
    padding: 10px 15px 20px 15px;
  }
}

